add blog post emoji

--- a/website/newsletter/113.mdx
+++ b/website/newsletter/113.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 113
-title: "#113: React source code, SOLID, Remix, Docusaurus, FP, Remotion, Rapier, Hermes, RN at Airbnb..."
+title: "📨 #113: React source code, SOLID, Remix, Docusaurus, FP, Remotion, Rapier, Hermes, RN at Airbnb..."
 authors: [slorber]
 date: 07-19-2022
 image: /img/TWIR_POST.png
