--- a/website/newsletter/115.mdx
+++ b/website/newsletter/115.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 115
-title: "#115: Astro, Radix, Remix, Next.js, MDX, Storybook, Expo 46, Skia, TanStack, TC39, Docusaurus..."
+title: "📨 #115: Astro, Radix, Remix, Next.js, MDX, Storybook, Expo 46, Skia, TanStack, TC39, Docusaurus..."
 authors: [slorber]
 date: 08-05-2022
 image: /img/TWIR_POST.png
