--- a/website/newsletter/109-and-previous.mdx
+++ b/website/newsletter/109-and-previous.mdx
@@ -1,6 +1,6 @@
 ---
 slug: previous
-title: "#109 and before"
+title: "📨 #109 and before"
 authors: [slorber]
 date: 01-01-2020
 image: /img/TWIR_POST.png
