--- a/website/newsletter/111.mdx
+++ b/website/newsletter/111.mdx
@@ -1,6 +1,6 @@
 ---
 slug: 111
-title: "#111: Reassure, Multiplayer Cursors, Next.js, Meteor, Storybook, TanStack, FlashList, Bun..."
+title: "📨 #111: Reassure, Multiplayer Cursors, Next.js, Meteor, Storybook, TanStack, FlashList, Bun..."
 authors: [slorber]
 date: 07-06-2022
 image: /img/TWIR_POST.png
