add some french translations

--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/109-and-previous.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/109-and-previous.mdx
@@ -8,8 +8,8 @@ image: /img/TWIR_POST.png
 
 Les anciennes éditions de cette newsletter sont archivées:
 
-- [🇫🇷 Revue archive of Sébastien Lorber](https://www.getrevue.co/profile/sebastien-lorber): from issue #1
-- [🇬🇧 Revue archive of This Week In React](https://www.getrevue.co/profile/thisweekinreact): from issue #73
+- [🇫🇷 Revue archive of Sébastien Lorber](https://www.getrevue.co/profile/sebastien-lorber): depuis l'édition #1
+- [🇬🇧 Revue archive of This Week In React](https://www.getrevue.co/profile/thisweekinreact): depuis l'édition #73
 
 :::note
 
