--- a/website/articles/2022-08-31-useSyncExternalStore-the-underrated-react-api/index.mdx
+++ b/website/articles/2022-08-31-useSyncExternalStore-the-underrated-react-api/index.mdx
@@ -1,9 +1,11 @@
 ---
-slug: useSyncExternalStore-the-underestimated-react-api
+slug: useSyncExternalStore-the-underrated-react-api
 title: useSyncExternalStore - The Underrated React API
 authors: [slorber]
 ---
 
-# useSyncExternalStore - The Underestimated React API
+# useSyncExternalStore - The Underrated React API
 
 TODO
+
+## hey
