draft of sponsoring page

--- a/website/src/pages/sponsoring.mdx
+++ b/website/src/pages/sponsoring.mdx
@@ -1,3 +1,126 @@
+import newsletterStats from "@site/src/newsletterStats";
+
 # Sponsor the newsletter
 
-blabla
+Reach a **qualified and engaged** audience of **experimented React developers** with an ad in our [weekly newsletter](/newsletter) full of React news.
+
+---
+
+## TLDR
+
+<ul>
+  <li>
+    <b>Advertise</b>: a product, course, conference, job offer...
+  </li>
+  <li>
+    <b>Placements</b>: 1st sponsor, 2nd sponsor, job offers, dedicated issue, custom...
+  </li>
+  <li>
+    <b>Subscribers count</b>: <span>{newsletterStats.all.subscribersCount}</span>
+  </li>
+  <li>
+    <b>Open-rate</b>: <span>{newsletterStats.all.openRate}%</span>
+  </li>
+  <li>
+    <b>Click-rate</b>: <span>{newsletterStats.all.clickRate}%</span>
+  </li>
+  <li>
+    <b>Localized</b>: the newsletter is sent in 🇬🇧 🇫🇷
+  </li>
+  <li>
+    <b>Segmented</b>: your ad can target a specific language segment
+  </li>
+  <li>
+    <b>Readers from</b>: Meta, Google, Microsoft, GitHub, Shopify, Amazon, Stripe, Cloudflare, ByteDance, Figma, Uber...
+  </li>
+</ul>
+
+---
+
+## Audience
+
+The audience of our [weekly newsletter](/newsletter) is **qualitative and engaged**, with open-rates way above the industry standard.
+
+### 📜 Content
+
+Our editorial line assumes our readers are:
+- **React developers**: we cover the whole React ecosystem
+- **React-Native** developers: there's a dedicated section in the newsletter
+- **experienced**: they know React well and are not interested in beginner-friendly content
+- **passionate**: they want to stay on top of their favorite technology
+- **open-minded**: they also want to know about non-React news that are relevant to them
+- **respecting their time**: they want a content pre-filter instead of scrolling on Twitter
+
+:::info This newsletter is different
+
+This is not a typical weekly React curation newsletter. Instead, it is a weekly curation of news ***for*** React developers.
+
+We focus on what's **really new** in an **exhaustive** way. There's usually **a lof of external links**, but readers aren't expected to click on all of them: simply reading the headlines and comments provide value to them.
+
+We filter heavily content that does not match our editorial line, and generally exclude:
+- content produced for SEO reasons based on keyword analysis
+- listicles, 101's, verbose step-by-step tutorials
+- UI libraries and npm packages
+
+:::
+
+<br/>
+
+### 📈 Stats
+
+<SponsoringTabsStats/>
+
+<br/>
+
+:::tip About the open-rate
+
+In practice, the open-rate is likely higher because:
+- [iOS 15 prevents email tracking](https://phoscreative.com/articles/ios15-email-marketing/)
+- [Gmail long emails clipping prevent tracking pixel load](https://convertkit.com/sender-reputation)
+- Popular tools among our audience: [StoopInbox](https://stoopinbox.com/), [Kill The Newsletter](https://kill-the-newsletter.com/), [FeedBin](https://feedbin.com/), [ReadWise](https://readwise.io/), [Feedly](https://feedly.com/), [Newsletterss](https://newsletterss.com/), [Mailbrew](https://mailbrew.com/), [ProtonMail](https://proton.me/), [Apple Private Relay Email](https://developer.apple.com/documentation/sign_in_with_apple/sign_in_with_apple_js/communicating_using_the_private_email_relay_service), [Firefox Relay](https://relay.firefox.com/)...
+
+:::
+
+<br/>
+
+### 🗣 Testimonials
+
+Readers regularly express their satisfaction reading our content ([full Twitter testimonials list](https://twitter.com/sebastienlorber/timelines/1448942785814466561)). We hand-picked some of them:
+
+<SponsoringTabsTestimonials/>
+
+
+
+---
+
+## To sponsor or not?
+
+The audience of this newsletter is more qualitative than quantitative. Make sure your ad is relevant to the target audience.
+
+### ✅ Good fit
+
+- Reach **experimented React developers**
+- Reach **cross-platform enthusiasts**, using both **React and React-Native**
+- Reach a unique audience of **React developers speaking French 🇫🇷**
+- Reach **open-minded** developers using JavaScript, TypeScript, Node.js...
+- Reach **decision makers**: CTOs, tech leads, engineering managers...
+
+### ❌ Bad fit
+
+- Reach an audience **of junior** React developers
+- Promote something **irrelevant** to React developers
+
+:::info
+
+We will tell you if we think your ad is not a good fit.
+
+:::
+
+---
+
+## Placements
+
+---
+
+## FAQ
+
