--- a/website/src/pages/sponsoring.mdx
+++ b/website/src/pages/sponsoring.mdx
@@ -13,8 +13,7 @@ Reach a **qualified and engaged** audience of **experimented React developers** 
     <b>Advertise</b>: a product, course, conference, job offer...
   </li>
   <li>
-    <b>Placements</b>: 1st sponsor, 2nd sponsor, job offers, dedicated issue,
-    custom...
+    <b>Placements</b>: 1st sponsor, 2nd sponsor, job offers, custom...
   </li>
   <li>
     <b>Subscribers count</b>:{" "}
