fix french sponsoring page

--- a/website/i18n/fr/docusaurus-plugin-content-pages/sponsoring.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-pages/sponsoring.mdx
@@ -1,3 +1,5 @@
 # Sponsoriser la newsletter
 
-blabla
+Cette page n'est pas encore traduite.
+
+En attendant, merci de consulter la [page en Anglais](https://thisweekinreact.com/sponsoring)
