--- a/website/src/pages/sponsoring.mdx
+++ b/website/src/pages/sponsoring.mdx
@@ -189,17 +189,19 @@ A newsletter issue can contain **up to 4 job offers**.
 
 ### 🧑‍🎨 Custom
 
-Reach out to [sponsor@thisweekinreact.com](mailto:sponsor@thisweekinreact.com?subject=Custom%20sponsorship%20offering) to discuss in details your sponsorship need.
+Reach out to [sponsor@thisweekinreact.com](mailto:sponsor@thisweekinreact.com?subject=Custom%20sponsorship%20offering) to discuss in details your sponsorship needs.
 
 We can offer premium sponsorship opportunities:
 
-- Sponsorship placements on the occasional [articles](/articles) that we write and send to our subscribers
+- A sponsored placement on our occasional [React articles](/articles), that we also send by email
 - A sponsored honest review of your product
-- A sponsored issue 100% dedicated to your product (max 1/month)
+- A sponsored issue 100% dedicated to your product
 
 ---
 
 ## Order process {#order-process}
+
+### Now
 
 To order a sponsorship slot, follow these steps:
 
@@ -247,6 +249,8 @@ We will send the ad copy before the 31/08/2022
 ```
 
 </details>
+
+### Later
 
 Once the order is complete:
 
