--- a/website/src/pages/sponsoring.mdx
+++ b/website/src/pages/sponsoring.mdx
@@ -77,19 +77,33 @@ Our editorial line assumes our readers are:
 - **open-minded**: they also want to know about non-React news that are relevant to them
 - **respecting their time**: they want a content pre-filter instead of scrolling on Twitter
 
-:::info This newsletter is different
+<details>
+  <summary>What makes this newsletter unique</summary>
 
-This is not a typical weekly React curation newsletter. Instead, it is a weekly curation of news **_for_** React developers.
+  It is a weekly curation of news **for** React developers, not just about React.
 
-We focus on what's **really new** in an **exhaustive** way. There's usually **a lof of external links**, but readers aren't expected to click all of them: simply reading the headlines and comments usually provide enough value.
+  We focus on what's **really new** in an **exhaustive** way. There's usually **a lof of external links**, but readers aren't expected to click all of them: simply reading the headlines and comments usually provide enough value.
 
-We filter heavily content that does not match our editorial line, and generally exclude:
+  We **filter content** heavily, and generally exclude:
 
-- content produced for SEO, based on keyword analysis
-- listicles, 101's, verbose step-by-step tutorials
-- most UI libraries and npm packages
+  - content produced for SEO, based on keyword analysis
+  - listicles, 101's, verbose step-by-step tutorials
+  - most UI libraries and npm packages
 
-:::
+</details>
+
+<details>
+  <summary>About the author - Sébastien Lorber</summary>
+
+  [**Sébastien Lorber**](https://www.linkedin.com/in/sebastienlorber) is a T-shaped software engineer, with a strong React and React-Native expertise.
+
+  He became a **React early-adopter in [January 2014**](https://stackoverflow.com/questions/21352587/does-react-use-requestanimationframe-if-so-how-does-it-use-it).
+
+  With **nearly a decade of React experience**, he has the credibility and authority to know exactly what is interesting to a senior React developer, and is able to provide **unique insight**.
+
+  Since 2020, he has been **working for Meta** as a freelancer. He is the **lead maintainer of [Docusaurus](github.com/facebook/docusaurus)**, a React static site generator for creating beautiful documentation websites. It is one of Meta's most successful open source project, and his managers and colleagues are satisfied of his work ([1](https://twitter.com/JoelMarcey/status/1554136849198637058), [2](https://twitter.com/zpao/status/1554147108961128451), [3](https://twitter.com/yangshunz/status/1554008007331041281)). This site itself is built with Docusaurus!
+
+</details>
 
 <br />
 
@@ -99,13 +113,13 @@ We filter heavily content that does not match our editorial line, and generally 
 
 <br />
 
-:::tip About the open-rate
+:::caution About the open-rate
 
 In practice, the open-rate is likely higher because:
 
 - [iOS 15 prevents email tracking](https://phoscreative.com/articles/ios15-email-marketing/)
 - [Gmail long emails clipping prevent tracking pixel load](https://convertkit.com/sender-reputation)
-- Popular tools among our audience: [StoopInbox](https://stoopinbox.com/), [Kill The Newsletter](https://kill-the-newsletter.com/), [FeedBin](https://feedbin.com/), [ReadWise](https://readwise.io/), [Feedly](https://feedly.com/), [Newsletterss](https://newsletterss.com/), [Mailbrew](https://mailbrew.com/), [ProtonMail](https://proton.me/), [Apple Private Relay Email](https://developer.apple.com/documentation/sign_in_with_apple/sign_in_with_apple_js/communicating_using_the_private_email_relay_service), [Firefox Relay](https://relay.firefox.com/)...
+- Our audience is using: [StoopInbox](https://stoopinbox.com/), [Kill The Newsletter](https://kill-the-newsletter.com/), [FeedBin](https://feedbin.com/), [ReadWise](https://readwise.io/), [Feedly](https://feedly.com/), [Newsletterss](https://newsletterss.com/), [Mailbrew](https://mailbrew.com/), [ProtonMail](https://proton.me/), [Apple Private Relay Email](https://developer.apple.com/documentation/sign_in_with_apple/sign_in_with_apple_js/communicating_using_the_private_email_relay_service), [Firefox Relay](https://relay.firefox.com/)...
 
 :::
 
@@ -138,12 +152,14 @@ The newsletter structure stays the same every week, offering 3 sponsorship ad pl
   </b> to get a better idea!
 </span>
 
+<br/>
+<br/>
 
 :::tip
 
 Each placement has a different price and ad copy constraints.
 
-Ensure your ad copy respect the constraints with this online [character counter](https://wordcounter.net/character-count).
+Use this [**character counter**](https://wordcounter.net/character-count) to ensure your ad copy respect those constraints.
 
 :::
 
@@ -218,7 +234,7 @@ We can offer premium sponsorship opportunities:
 
 ## Order process {#order-process}
 
-### Now
+### Now {#now}
 
 To order a sponsorship slot, follow these steps:
 
@@ -267,7 +283,13 @@ We will send the ad copy before the 31/08/2022
 
 </details>
 
-### Later
+:::tip
+
+You don't have to book consecutive ad slots. Spreading your ads over time can give a better campaign ROI.
+
+:::
+
+### Later {#later}
 
 Once the order is complete:
 
