--- a/website/src/pages/sponsoring.mdx
+++ b/website/src/pages/sponsoring.mdx
@@ -3,7 +3,7 @@ import {
   sponsorshipCalendarLink,
   lastIssueLink,
 } from "@site/src/newsletter";
-import {PrimaryAdExample, SecondaryAdExample} from "@site/src/components/AdExamples";
+import {PrimaryAdExample, SecondaryAdExample, JobAdExample} from "@site/src/components/AdExamples";
 
 # Sponsor the newsletter
 
@@ -211,8 +211,10 @@ A newsletter issue can contain **up to 4 job offers**.
   <summary>Ad constraints and example</summary>
 
 - **Title**: 55 characters max, 1 link
-- **Body**: 200 characters max, 0 link, raw/unstyled text
+- **Body**: 230 characters max, 0 link, raw/unstyled text
 - **Image**: 🚫
+
+<JobAdExample/>
 
 </details>
 
