--- a/website/src/pages/sponsoring.mdx
+++ b/website/src/pages/sponsoring.mdx
@@ -236,7 +236,7 @@ We can offer premium sponsorship opportunities:
 
 ## Order process {#order-process}
 
-### Now {#now}
+### ⚡️ Now {#now}
 
 To order a sponsorship slot, follow these steps:
 
@@ -291,7 +291,7 @@ You don't have to book consecutive ad slots. Spreading your ads over time can gi
 
 :::
 
-### Later {#later}
+### ⏱ Later {#later}
 
 Once the order is complete:
 
