--- a/website/src/pages/sponsoring.mdx
+++ b/website/src/pages/sponsoring.mdx
@@ -101,7 +101,7 @@ Our editorial line assumes our readers are:
 
   With **nearly a decade of React experience**, he has the credibility and authority to know exactly what is interesting to a senior React developer, and is able to provide **unique insight**.
 
-  Since 2020, he has been **working for Meta** as a freelancer. He is the **lead maintainer of [Docusaurus](github.com/facebook/docusaurus)**, a React static site generator for creating beautiful documentation websites. It is one of Meta's most successful open source project. [Docusaurus 2.0 launched recently](https://docusaurus.io/blog/2022/08/01/announcing-docusaurus-2.0), and his managers and colleagues are satisfied of his work ([1](https://twitter.com/JoelMarcey/status/1554136849198637058), [2](https://twitter.com/zpao/status/1554147108961128451), [3](https://twitter.com/yangshunz/status/1554008007331041281)). This site itself is built with Docusaurus!
+  Since 2020, he has been **working for Meta** as a freelancer. He is the **lead maintainer of [Docusaurus](https://github.com/facebook/docusaurus)**, a React static site generator for creating beautiful documentation websites. It is one of Meta's most successful open source project. [Docusaurus 2.0 launched recently](https://docusaurus.io/blog/2022/08/01/announcing-docusaurus-2.0), and his managers and colleagues are satisfied of his work ([1](https://twitter.com/JoelMarcey/status/1554136849198637058), [2](https://twitter.com/zpao/status/1554147108961128451), [3](https://twitter.com/yangshunz/status/1554008007331041281)). This site itself is built with Docusaurus!
 
 </details>
 
