--- a/website/src/pages/sponsoring.mdx
+++ b/website/src/pages/sponsoring.mdx
@@ -118,7 +118,7 @@ Our editorial line assumes our readers are:
 In practice, the open-rate is likely higher because:
 
 - [iOS 15 prevents email tracking](https://phoscreative.com/articles/ios15-email-marketing/)
-- [Gmail long emails clipping prevent tracking pixel load](https://convertkit.com/sender-reputation)
+- [Gmail clipping prevents email tracking](https://convertkit.com/sender-reputation)
 - Our audience is using: [StoopInbox](https://stoopinbox.com/), [Kill The Newsletter](https://kill-the-newsletter.com/), [FeedBin](https://feedbin.com/), [ReadWise](https://readwise.io/), [Feedly](https://feedly.com/), [Newsletterss](https://newsletterss.com/), [Mailbrew](https://mailbrew.com/), [ProtonMail](https://proton.me/), [Apple Private Relay Email](https://developer.apple.com/documentation/sign_in_with_apple/sign_in_with_apple_js/communicating_using_the_private_email_relay_service), [Firefox Relay](https://relay.firefox.com/)...
 
 :::
