--- a/website/articles/2022-09-05-useSyncExternalStore-the-underrated-react-api/index.mdx
+++ b/website/articles/2022-09-05-useSyncExternalStore-the-underrated-react-api/index.mdx
@@ -1,20 +1,28 @@
 ---
 slug: useSyncExternalStore-the-underrated-react-api
-title: useSyncExternalStore - The Underrated React API
+title: useSyncExternalStore - The underrated React API
 authors: [slorber]
 ---
 
-# useSyncExternalStore - The Underrated React API
+# useSyncExternalStore - The underrated React API
 
-Blog post intro
+You might have heard of [`useSyncExternalStore()`](https://reactjs.org/docs/hooks-reference.html#usesyncexternalstore), a new React 18 hook to **subscribe to external data sources**. You might already know that this hook is used internally by state management libraries - like [Redux](https://github.com/reduxjs/react-redux/pull/1808) - to implement a **selector system** that is [compatible with **React 18 Concurrent features**](https://github.com/reactwg/react-18/discussions/70).
+
+But what about **using `useSyncExternalStore()` in your own application code**?
+
+In this interactive article, I want to present a problem you might already have: **over-returning React hooks** triggering useless React re-renders.
 
 <!-- truncate -->
 
-import { App, AppFixed } from "./useSyncExternalStoreDemos";
+import { App, AppFixed, ScrollApp } from "./useSyncExternalStoreDemos";
 
-## Problem
+## Over-returning hooks
 
-Let's consider an app using React-Router:
+Let's illustrate the problem of over-returning React hooks with the [`useLocation()`](https://reactrouter.com/en/main/hooks/use-location) hook from React-Router.
+
+This hook returns an object with a lot of attributes (`pathname`, `hash`, `search`...), and you might actually not read all of them. Just calling the hook will trigger re-renders when any of these attributes is updated.
+
+Let's consider this React-Router app:
 
 ```tsx
 function CurrentPathname() {
@@ -48,14 +56,163 @@ function App() {
 }
 ```
 
-The problem might not be obvious at first,
-
 <App />
 
-## Official doc
+Click on any hash link above: the `CurrentPathname` component will re-render, despite not even reading the `hash` attribute.
 
-https://beta.reactjs.org/learn/you-might-not-need-an-effect#subscribing-to-an-external-store
+:::tip
 
-## Solution
+Whenever a hook returns data that you don't display, think about React re-renders. A tiny `useLocation()` call added at the top of a React tree could ruin your whole app's performance.
+
+:::
+
+:::info
+
+The goal is not to criticize React-Router, but rather to illustrate the problem. `useLocation()` was just a good pragmatic candidate to create an interactive blog post. Other internal APIs and third-party libraries might also over-return.
+
+:::
+
+## `useSyncExternalStore` to the rescue?
+
+The [official documentation](https://reactjs.org/docs/hooks-reference.html#usesyncexternalstore) says:
+
+> useSyncExternalStore is a hook recommended for reading and subscribing from external data sources in a way that’s compatible with concurrent rendering features like selective hydration and time slicing.
+> This method returns the value of the store and accepts three arguments:
+>
+> - `subscribe`: function to register a callback that is called whenever the store changes.
+> - `getSnapshot`: function that returns the current value of the store.
+> - `getServerSnapshot`: function that returns the snapshot used during server rendering.
+
+```tsx
+function useSyncExternalStore<Snapshot>(
+  subscribe: (onStoreChange: () => void) => () => void,
+  getSnapshot: () => Snapshot,
+  getServerSnapshot?: () => Snapshot
+): Snapshot;
+```
+
+This might feel a bit abstract. This [beta doc page](https://beta.reactjs.org/learn/you-might-not-need-an-effect#subscribing-to-an-external-store) gives a good example:
+
+```tsx
+function subscribe(callback) {
+  window.addEventListener("online", callback);
+  window.addEventListener("offline", callback);
+  return () => {
+    window.removeEventListener("online", callback);
+    window.removeEventListener("offline", callback);
+  };
+}
+
+function useOnlineStatus() {
+  // ✅ Good: Subscribing to an external store with a built-in Hook
+  return useSyncExternalStore(
+    subscribe, // React won't resubscribe for as long as you pass the same function
+    () => navigator.onLine, // How to get the value on the client
+    () => true // How to get the value on the server
+  );
+}
+
+function ChatIndicator() {
+  const isOnline = useOnlineStatus();
+  // ...
+}
+```
+
+It turns out that the browser history can also be considered as an external data source. Let's see how to use `useSyncExternalStore` with React-Router!
+
+## Implementing `useHistorySelector()`
+
+React-Router expose everything we need to wire `useSyncExternalStore`:
+
+- access the browser history with [`useHistory`](https://v5.reactrouter.com/web/api/Hooks/usehistory)
+- subscribe for history updates with [`history.listen()`](https://github.com/remix-run/history/blob/main/docs/api-reference.md#history.listen)
+- access a snapshot of the current location with [`history.location`](https://github.com/remix-run/history/blob/main/docs/api-reference.md#historylocation)
+
+:::caution
+
+This website uses React-Router v5: the solution will be different for React-Router v6.
+
+:::
+
+The implementation of `useHistorySelector()` relatively simple:
+
+```tsx
+function useHistorySelector(selector) {
+  const history = useHistory();
+  return useSyncExternalStore(history.listen, () => selector(history));
+}
+```
+
+Let's use this new `useHistorySelector` hook in our app:
+
+```tsx
+function CurrentPathname() {
+  const pathname = useHistorySelector((history) => history.location.pathname);
+  return <div>{pathname}</div>;
+}
+
+function CurrentHash() {
+  const hash = useHistorySelector((history) => history.location.hash);
+  return <div>{hash}</div>;
+}
+```
 
 <AppFixed />
+
+Now, when you click on a hash link above, the `CurrentPathname` component will **not re-render** anymore!
+
+## Other use-cases
+
+There are so many external data sources that we can subscribe to, and implementing your own selector system on top might enable you to optimize React re-renders.
+
+For example, let's consider we want to use the `scrollY` position of a page. We can implement this custom React hook:
+
+```tsx
+function useScrollY(selector = (id) => id) {
+  const subscribe = useCallback((onStoreChange) => {
+    window.addEventListener("scroll", onStoreChange);
+    return () => window.removeEventListener("scroll", onStoreChange);
+  }, []);
+
+  return useSyncExternalStore(
+    subscribe,
+    () => selector(window.scrollY),
+    () => undefined // Can't read scroll positiuon on the server
+  );
+}
+```
+
+Now we can use this hook with or without a selector:
+
+```tsx
+function ScrollY() {
+  const scrollY = useScrollY();
+  return <div>{scrollY}</div>;
+}
+
+function ScrollYRounded() {
+  const to = 100;
+  const scrollYRounded = useScrollY((y) => Math.round(y / to) * to);
+  return <div>{scrollYRounded}</div>;
+}
+```
+
+<ScrollApp />
+
+Scroll the page and see how the components above re-render? One is re-rendering less than the other!
+
+:::tip
+
+You can also optimize React re-renders by **not over-returning**. But returning a wide range value such as `scrollY` is also a form of over-returning. If you don't need a `1px` scroll precision level, consider returning a narrower value, such as a boolean or an enum/union type.
+
+For example: a `useResponsiveBreakpoint()` hook that only returns a limited set of values (`small`, `medium` or `large`) will be more optimized than `useViewportWidth()` returning the current.
+
+If your React component only handles `large` screens differently, consider creating an even narrower `useIsLargeScreen()` hook that does not trigger a re-render on a `small` -> `medium` screen resize.
+
+:::
+
+## Conclusion
+
+I hope this article convinced you to take a second look at `useSyncExternalStore()`. I feel it is currently underused in the React ecosystem, and deserves a bit more love. There are a lot of external data sources that you can subscribe to.
+
+If you still haven't upgraded to React 18, there's a npm [use-sync-external-store](https://www.npmjs.com/package/use-sync-external-store) shim that you can already use today in older versions.
