--- a/website/articles/2022-09-05-useSyncExternalStore-the-underrated-react-api/index.mdx
+++ b/website/articles/2022-09-05-useSyncExternalStore-the-underrated-react-api/index.mdx
@@ -178,7 +178,7 @@ There are so many external data sources that we can subscribe to, and implementi
 For example, let's consider we want to use the `scrollY` position of a page. We can implement this custom React hook:
 
 ```tsx
-// A constant/memoized fn prevents unsubscribe/resubscribe
+// A memoized constant fn prevents unsubscribe/resubscribe
 // In practice it is not a big deal
 function subscribe(onStoreChange) {
   window.addEventListener("scroll", onStoreChange);
