polish article + extract renderBox comp

--- a/website/articles/2022-09-05-useSyncExternalStore-the-underrated-react-api/index.mdx
+++ b/website/articles/2022-09-05-useSyncExternalStore-the-underrated-react-api/index.mdx
@@ -14,11 +14,7 @@ In this interactive article, I want to present a problem you might already have:
 
 <!-- truncate -->
 
-import {
-  App,
-  AppFixed,
-  ScrollApp,
-} from "./useSyncExternalStoreDemos";
+import { App, AppFixed, ScrollApp } from "./demos";
 
 ## Over-returning hooks
 
