improve email code block

--- a/website/articles/2022-09-05-useSyncExternalStore-the-underrated-react-api/index.mdx
+++ b/website/articles/2022-09-05-useSyncExternalStore-the-underrated-react-api/index.mdx
@@ -104,11 +104,10 @@ function subscribe(callback) {
 }
 
 function useOnlineStatus() {
-  // ✅ Good: Subscribing to an external store with a built-in Hook
   return useSyncExternalStore(
-    subscribe, // React won't resubscribe for as long as you pass the same function
-    () => navigator.onLine, // How to get the value on the client
-    () => true // How to get the value on the server
+    subscribe,
+    () => navigator.onLine,
+    () => true
   );
 }
 
