add workflow pages

--- a/website/src/pages/workflow/confirm-your-email.mdx
+++ b/website/src/pages/workflow/confirm-your-email.mdx
@@ -2,10 +2,10 @@
 
 Please confirm your email address to validate your subscription
 
-:::tip Check spams
+:::tip Check your spam folder
 
-If you don't receive any confirmation email, maybe check your spam folder?
+If you don't receive any confirmation email from us, maybe check your spam folder?
 
-The email will come from address: `sebastien@thisweekinreact.com`
+The email will come from `sebastien@thisweekinreact.com`
 
 :::
