--- a/website/articles/2022-09-05-useSyncExternalStore-the-underrated-react-api/index.mdx
+++ b/website/articles/2022-09-05-useSyncExternalStore-the-underrated-react-api/index.mdx
@@ -14,6 +14,8 @@ In this interactive article, I want to present you a problem: **over-returning R
 
 <!-- truncate -->
 
+<SubscribeFormEmbed />
+
 import { App, AppFixed, ScrollApp } from "./demos";
 
 ## Over-returning hooks
@@ -229,3 +231,5 @@ If a React component only handles `large` screens differently, consider creating
 I hope this article convinced you to take a second look at `useSyncExternalStore()`. I feel it is currently underused in the React ecosystem, and deserves a bit more love. There are many external data sources that you can subscribe to.
 
 If you still haven't upgraded to React 18, there's a npm [use-sync-external-store](https://www.npmjs.com/package/use-sync-external-store) shim that you can already use today in older versions. There is also a `use-sync-external-store/with-selector` export in case you need to return a memoized non-primitive value.
+
+<SubscribeFormEmbed />
